Prisma and Postgres SQL Set up

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
-    "prisma": "^5.13.0",
+    "@types/node": "^20.14.2",
+    "prisma": "^5.15.0",
+    "ts-node": "^10.9.2",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.4.3"
   },
