--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "dependencies": {
     "@apollo/server": "^4.10.1",
     "@prisma/client": "^5.13.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "express": "^4.19.1",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
