--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.14.2",
     "prisma": "^5.15.0",
     "ts-node": "^10.9.2",
@@ -21,6 +22,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2"
