--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,83 @@
-node_modules
-# Keep environment variables out of version control
-.env
+# Node modules
+node_modules/
+
+# Build output
+.next/
+out/
+# production
+/build
+
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# dotenv environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Next.js
+.next/
+out/
+
+# TailwindCSS
+tailwind.config.js
+postcss.config.js
+
+# VSCode
+.vscode/
+
+# MacOS
+.DS_Store
+
+# Prisma
+prisma/.env
+prisma/migrations/
+prisma/dev.db
+
+# Other
+*.log
+.pnp
+.pnp.js
+
+# Optional npm cache directory
+.npm
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Dependency directories
+jspm_packages/
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn/Metro/React Native
+.expo/
+.expo-shared/
+
+# Parcel cache
+.cache/
+
+# SvelteKit
+.svelte-kit/
+
+# IDEs and editors
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Testing
+coverage/
